atualização projeto gini

--- a/PROJETO_GINI/Projeto_pratico_GINI.tex
+++ b/PROJETO_GINI/Projeto_pratico_GINI.tex
@@ -75,7 +75,7 @@
 
 
 Para a realização do projeto prático vamos utilizar os dados socioeconômicos no repositório \url{https://github.com/pedroallmeiida/econometria/PROJETO_GINI/dados_tratado/dados_final_projeto.csv}. 
-De acordo com o banco de dados selecionado construa um modelo de regressão beta para avaliar o comportamento da variável resposta chamada GINI. A seguir vamos apresentar uma descrição das variáveis que vamos utilizar: 
+De acordo com o banco de dados selecionado construa um modelo de regressão beta para avaliar o comportamento da variável resposta chamada GINI. A descrição das variáveis é apresentada na \ref{tab:descricao}. 
 
 \begin{table}[htb!]
 	\tiny
@@ -91,7 +91,7 @@ De acordo com o banco de dados selecionado construa um modelo de regressão beta
 		\verb|AGUA_ENCANADA_PRINCIPAL| & Taxa de domicílios que possui ligação a rede geral de água  \\
 		& \, e a utiliza como forma principal \\
 		\verb|NAO_POSSUI_AGUA_ENCANADA| & Taxa de domicílios que não possui ligação da água com a rede geral \\
-		\verb|REDE_GERAL_REDE_PLUVIAL_OU_FOSSA_LIGADA_A_REDE| & Taxa de domicílios com coleta adequada de esgoto \\
+		\verb|NAO_POSSUI_LIGACAO_ESGOTO| & Taxa de domicílios com coleta adequada de esgoto \\
 		\verb|NAO_TINHAM_BANHEIRO_NEM_SANITARIO| & Taxa de domicílios que não possuem banheiro nem sanitário \\
 		\verb|PERC_COLETA_LIXO| & Percentual de domicílios com coleta de lixo\\
 		\verb|PERC_ACESSO_INTERNET| & Percentual de domicílios com acesso a internet \\
